Fixing Responsiveness: Of Typer on mobile

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -4,6 +4,8 @@
   align-items: baseline;
   width: 30vw;
 
+  margin: 1.5rem 0;
+
   h1 {
     margin-right: 1rem;
     color: rgb(46, 102, 171);
@@ -134,6 +136,8 @@
   align-items: flex-start;
   height: 100%;
   margin-left: 1rem;
+  margin-bottom: 0.5rem;
+  // margin-top: 1rem;
 
   div {
     width: 100px;
